<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TTMobileapp</string>
    <string name="hello_CoStrategix">hello CoStrategix !</string>
    <string name="login">Login !</string>
    <string name="update">Update</string>
    <string name="addtimeentrybutton">AddTimeEntry</string>
    <string name="TimeEntryActivity">TimeEntryActivity</string>
    <string name="ProjectListActivity">ProjectListActivity</string>
    <string name="WorkTypeActivity">WorkTypeActivity</string>
    <string name="addtimeentry">Add Time entry</string>
    <string name="addtoFavorites">Favourites</string>
    <string name="Description">Description:</string>
    <string name="addEntrybutton">ADD ENTRY</string>
    <string name="addNickName">Nick Name:</string>
    <string name="AddEntryActivity">AddEntryActivity</string>
    <string name="selectaproject">Select a Project</string>
    <string name="selectaworktype">Select a WorkType</string>
    <string name="selectatasks">Select a Task</string>
    <string name="starttimetext">Start Time</string>
    <string name="endtimetext">End Time</string>
    <string name="timeentrysuccessful">Time Entry Successful</string>
    <string name="wanttoaddmore">Want to add one more?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Pleasewait">Please wait</string>
    <string name="datadownloading">Data Loading...</string>
    <string name="Ok">Ok</string>
    <string name="taskmessage">Task Message</string>
    <string name="taskstatus">Task not available</string>
    <string name="selectaprojectbeforetask">Please Select a Project first</string>
    <string name="str_btn_show">Select a color</string>
    <string name="btn_save">SAVE</string>
    <string name="addtofavourites">AddTo Favourites</string>
    <string name="Favourites">Favourites</string>

    <!-- Button text -->

</resources>
