<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editNickName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/addNickName"
        android:layout_toRightOf="@+id/addNickName"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/addNickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/addNickName"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editNickName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/add_blue_btn"
        android:text="@string/str_btn_show"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btn_show"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:background="@drawable/add_blue_btn"
        android:text="@string/btn_save"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="saveDetails" />

    <TextView
        android:id="@+id/colorCodeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addNickName"
        android:layout_below="@+id/btn_show"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="47dp"
        android:visibility="gone"
        android:text="" />

</RelativeLayout>