<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="200dp" >
        </ListView>

        <LinearLayout
            android:id="@+id/descriptionLinearLyout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="230dp" >

            <ImageView
                android:id="@+id/descriptionimageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_description" />

            <TextView
                android:id="@+id/descriptiontextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/Description"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>

        <EditText
            android:id="@+id/descriptioneditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="250dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:id="@+id/dateLinearLyout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="300dp" >

            <ImageView
                android:id="@+id/dateimageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_date_calendar" />

            <TextView
                android:id="@+id/dateOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeLinearLyout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="350dp" >

            <ImageView
                android:id="@+id/timeimageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_time" />

            <TextView
                android:id="@+id/starttimetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/starttimetext"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/endtimetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/endtimetext"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timevalueLinearLyout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="370dp" >

            <TextView
                android:id="@+id/starttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/endtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>

        <Button
            android:id="@+id/addEntrybutton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timevalueLinearLyout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/add_blue_btn"
            android:text="@string/addEntrybutton"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnfavorites"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/listView1"
            android:background="@drawable/add_blue_btn"
            android:layout_marginRight="5dp"
            android:text="Add"
            android:textColor="@color/white" />
    </RelativeLayout>

</ScrollView>